- Improved JS code of "SelectXXXAndAddWidget" widgets. - Added "AjaxRedirectMiddleware".
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@858 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -155,6 +155,8 @@ MIDDLEWARE_CLASSES = (
     'django.middleware.locale.LocaleMiddleware',
     'django.contrib.messages.middleware.MessageMiddleware',
     'django.contrib.redirects.middleware.RedirectFallbackMiddleware',
+
+    'prometeo.core.forms.middleware.AjaxRedirectMiddleware',
 )
 
 # Root for URL dispatcher.
