- Added new field to the "Link" model which allows to specify if the linked page should be opened in a new window or not. - Improved "model_name" templatetag which now works better with proxy models.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@864 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/menus/bookmark_edit.html
+++ b/themes/default/templates/menus/bookmark_edit.html
@@ -18,6 +18,6 @@
 
 {% block editform %}
 <table class="properties">
-    {% property_table form "['title', 'url', 'description']" %}
+    {% property_table form "[['title', 'url'], 'description', 'new_window']" %}
 </table>
 {% endblock %}
