--- a/themes/default/templates/menus/menu.html
+++ b/themes/default/templates/menus/menu.html
@@ -7,7 +7,7 @@
     {% block menulink %}
     <li{% matchlink link request.get_full_path %} id="{{ link.slug|escape }}-link">
         {% with link.description|default:link.title|striptags as link_title %}
-        <a href="{{ link.url|escape }}" title="{% trans link_title %}">
+        <a{% if link.new_window %} target="_blank"{% endif %} title="{% trans link_title %}" href="{{ link.url|escape }}">
             {% trans link.title|escape %}
         </a>
         {% endwith %}
