Fixed "object" variable missing issue when using "create_update.create_object".
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@867 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/base_edit.html
+++ b/themes/default/templates/base_edit.html
@@ -4,7 +4,11 @@
 {% load details %}
 
 {% block meta_title %}
+{% if object %}
 {% model_name object as model %}
+{% else %}
+{% model_name form.instance as model %}
+{% endif %}
 {% if object.pk %}
 {% blocktrans %}Edit {{ model }}{% endblocktrans %}
 {% else %}
@@ -14,7 +18,11 @@
 
 {% block title %}
 <div class="title">
+    {% if object %}
     {% model_name object as model %}
+    {% else %}
+    {% model_name form.instance as model %}
+    {% endif %}
     {% if object.pk %}
     <h1>{{ object|striptags|capfirst }}</h1>
     <h2>{% blocktrans %}Edit {{ model }}{% endblocktrans %}</h2>
