Improved support for mobile platforms.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@868 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -156,7 +156,8 @@ MIDDLEWARE_CLASSES = (
     'django.contrib.messages.middleware.MessageMiddleware',
     'django.contrib.redirects.middleware.RedirectFallbackMiddleware',
 
-    'prometeo.core.forms.middleware.AjaxRedirectMiddleware',
+    'prometeo.core.middleware.MobileDetectionMiddleware',
+    'prometeo.core.middleware.AjaxRedirectMiddleware',
 )
 
 # Root for URL dispatcher.
