Improved style of dialogs.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@872 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -57,7 +57,7 @@
                 {% region "sidebar" %} 
             </div>
 
-            <div id="main">
+            <div id="main" class="page">
                 {% block messages %}
                 {% if messages %}
                 <div class="messages">
