--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -57,7 +57,7 @@
                 {% region "sidebar" %} 
             </div>
 
-            <div id="main" class="page">
+            <div id="main">
                 {% block messages %}
                 {% if messages %}
                 <div class="messages">
