Improved style of hover status of calendar links.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@874 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -879,6 +879,8 @@ form .submit input:hover, .submit a:hover, .cancel a:hover {
     font-weight: normal;
 }
 
+#content .calendar .events .daynr a:hover { font-weight: bold; }
+
 #content .calendar .events .daynr .weekend, #content .calendar .events .daynr .weekend a { color: #d21717; }
 
 #content .calendar .events .daynr .weekend .disabled { color: #ffc0c0; }
