Removed unused option.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@877 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -1094,7 +1094,7 @@ form .submit input:hover, .submit a:hover, .cancel a:hover {
 
 #main {
     min-width: 300px;
-    padding: 20px !important;
+    padding: 20px;
     overflow: auto;
 }
 
