--- a/themes/default/templates/notifications/notification_detail.html
+++ b/themes/default/templates/notifications/notification_detail.html
@@ -19,10 +19,10 @@
 {% endblock %}
 
 {% block objectactions %}
-{% if request.user == object.user or perms.notifications.delete_notification %}
+{% if object.pk in obj_perms.notifications.delete_notification %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url notification_delete object.user.username object.pk %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.notifications.change_notification %}
+{% if perms.notifications.view_notification %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url notification_list object.user.username %}">{% trans 'All' %}</a></li>
 {% endif %}
 {% endblock %}
