--- a/themes/default/templates/projects/ticket_detail.html
+++ b/themes/default/templates/projects/ticket_detail.html
@@ -25,16 +25,16 @@
 {% if perms.projects.add_ticket %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url ticket_add object.project.code %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.projects.change_ticket %}
+{% if object.pk in obj_perms.projects.change_ticket %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url ticket_edit object.project.code object.code %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.projects.delete_ticket %}
+{% if object.pk in obj_perms.projects.delete_ticket %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url ticket_delete object.project.code object.code %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.projects.change_ticket %}
+{% if perms.projects.view_ticket %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url ticket_list object.project.code %}">{% trans 'All' %}</a></li>
 {% endif %}
-{% if perms.projects.change_ticket %}
+{% if object.pk in obj_perms.projects.view_ticket %}
 {% if user not in object.stream.followers.all %}
 <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
 {% else %}
