--- a/themes/default/templates/sales/bankaccount_detail.html
+++ b/themes/default/templates/sales/bankaccount_detail.html
@@ -16,13 +16,13 @@
 {% if perms.sales.add_bankaccount %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url bankaccount_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.sales.change_bankaccount %}
+{% if object.pk in obj_perms.sales.change_bankaccount %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url bankaccount_edit object.pk %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.sales.delete_bankaccount %}
+{% if object.pk in obj_perms.sales.delete_bankaccount %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url bankaccount_delete object.pk %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.sales.change_bankaccount %}
+{% if perms.sales.view_bankaccount %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url bankaccount_list %}">{% trans 'All' %}</a></li>
 {% endif %}
 {% endblock %}
