--- a/themes/default/templates/auth/user_detail.html
+++ b/themes/default/templates/auth/user_detail.html
@@ -16,13 +16,13 @@
 {% if perms.auth.add_user %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url user_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if request.user.id in obj_perms.auth.change_user %}
+{% if object.pk in obj_perms.auth.change_user %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url user_edit object.username %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if request.user.id in obj_perms.auth.delete_user %}
+{% if object.pk in obj_perms.auth.delete_user %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url user_delete object.username %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.auth.change_user %}
+{% if perms.auth.view_user %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url user_list %}">{% trans 'All' %}</a></li>
 {% endif %}
 {% endblock %}
