--- a/themes/default/templates/hr/timesheet_detail.html
+++ b/themes/default/templates/hr/timesheet_detail.html
@@ -15,19 +15,19 @@
 {% if perms.hr.add_timesheet %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url timesheet_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.hr.change_timesheet %}
+{% if object.pk in obj_perms.hr.change_timesheet %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url timesheet_edit object.content_object.pk %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.hr.delete_timesheet %}
+{% if object.pk in obj_perms.hr.delete_timesheet %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url timesheet_delete object.content_object.pk %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.hr.change_timesheet %}
+{% if perms.hr.view_timesheet %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url timesheet_list %}">{% trans 'All' %}</a></li>
 {% endif %}
-{% if perms.hr.change_timesheet %}
+{% if object.pk in obj_perms.hr.view_timesheet %}
 <li class="print"><a title="{% trans 'Print' %}" href="{% url document_print object.pk object.owner.language %}">{% trans 'Print' %}</a></li>
 {% endif %}
-{% if perms.hr.change_timesheet %}
+{% if object.pk in obj_perms.hr.view_timesheet %}
 {% if user not in object.stream.followers.all %}
 <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
 {% else %}
