--- a/themes/default/templates/knowledge/faq_detail.html
+++ b/themes/default/templates/knowledge/faq_detail.html
@@ -17,16 +17,16 @@
 {% if perms.knowledge.add_faq %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url faq_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.knowledge.change_faq %}
+{% if object.pk in obj_perms.knowledge.change_faq %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url faq_edit object.pk %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.knowledge.delete_faq %}
+{% if object.pk in obj_perms.knowledge.delete_faq %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url faq_delete object.pk %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.knowledge.change_faq %}
+{% if perms.knowledge.view_faq %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url faq_list %}">{% trans 'All' %}</a></li>
 {% endif %}
-{% if perms.knoweldge.change_faq %}
+{% if perms.knoweldge.view_faq %}
 {% if user not in object.stream.followers.all %}
 <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
 {% else %}
