--- a/themes/default/templates/knowledge/poll_detail.html
+++ b/themes/default/templates/knowledge/poll_detail.html
@@ -23,16 +23,16 @@
 {% if perms.knowledge.add_poll %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url poll_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.knowledge.change_poll %}
+{% if object.pk in obj_perms.knowledge.change_poll %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url poll_edit object.pk %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.knowledge.delete_poll %}
+{% if object.pk in obj_perms.knowledge.delete_poll %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url poll_delete object.pk %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.knowledge.change_poll %}
+{% if perms.knowledge.view_poll %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url poll_list %}">{% trans 'All' %}</a></li>
 {% endif %}
-{% if perms.knoweldge.change_poll %}
+{% if perms.knoweldge.view_poll %}
 {% if user not in object.stream.followers.all %}
 <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
 {% else %}
