--- a/themes/default/templates/knowledge/wikipage_detail.html
+++ b/themes/default/templates/knowledge/wikipage_detail.html
@@ -15,10 +15,10 @@
 {% if perms.knowledge.add_wikipage %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url wikipage_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.knowledge.change_wikipage %}
+{% if object.pk in obj_perms.knowledge.change_wikipage %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url wikipage_edit object.slug %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.knowledge.delete_wikipage %}
+{% if object.pk in obj_perms.knowledge.delete_wikipage %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url wikipage_delete object.slug %}">{% trans 'Delete' %}</a></li>
 {% endif %}
 {% if perms.knowledge.view_wikipage %}
