--- a/themes/default/templates/partners/contact_detail.html
+++ b/themes/default/templates/partners/contact_detail.html
@@ -16,13 +16,13 @@
 {% if perms.partners.add_contact %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url contact_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.partners.change_contact %}
+{% if object.pk in obj_perms.partners.change_contact %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url contact_edit object.pk %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.partners.delete_contact %}
+{% if object.pk in obj_perms.partners.delete_contact %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url contact_delete object.pk %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.partners.change_contact %}
+{% if perms.partners.view_contact %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url contact_list %}">{% trans 'All' %}</a></li>
 {% endif %}
 {% endblock %}
