--- a/themes/default/templates/partners/partner_detail.html
+++ b/themes/default/templates/partners/partner_detail.html
@@ -16,16 +16,16 @@
 {% if perms.partners.add_partner %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url partner_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.partners.change_partner %}
+{% if object.pk in obj_perms.partners.change_partner %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url partner_edit object.pk %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.partners.delete_partner %}
+{% if object.pk in obj_perms.partners.delete_partner %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url partner_delete object.pk %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.partners.change_partner %}
+{% if perms.partners.view_partner %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url partner_list %}">{% trans 'All' %}</a></li>
 {% endif %}
-{% if perms.partners.change_partner %}
+{% if object.pk in obj_perms.partners.view_partner %}
 {% if user not in object.stream.followers.all %}
 <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
 {% else %}
