--- a/themes/default/templates/products/product_detail.html
+++ b/themes/default/templates/products/product_detail.html
@@ -16,16 +16,16 @@
 {% if perms.products.add_product %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url product_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.products.change_product %}
+{% if object.pk in obj_perms.products.change_product %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url product_edit object.pk %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.products.delete_product %}
+{% if object.pk in obj_perms.products.delete_product %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url product_delete object.pk %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.products.change_product %}
+{% if perms.products.view_product %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url product_list %}">{% trans 'All' %}</a></li>
 {% endif %}
-{% if perms.products.change_product %}
+{% if object.pk in obj_perms.products.view_product %}
 {% if user not in object.stream.followers.all %}
 <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
 {% else %}
