--- a/themes/default/templates/projects/project_detail.html
+++ b/themes/default/templates/projects/project_detail.html
@@ -16,16 +16,16 @@
 {% if perms.projects.add_project %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url project_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.projects.change_project %}
+{% if object.pk in obj_perms.projects.change_project %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url project_edit object.code %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.projects.delete_project %}
+{% if object.pk in obj_perms.projects.delete_project %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url project_delete object.code %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.projects.change_project %}
+{% if perms.projects.view_project %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url project_list %}">{% trans 'All' %}</a></li>
 {% endif %}
-{% if perms.projects.change_project %}
+{% if object.pk in obj_perms.projects.view_project %}
 {% if user not in object.stream.followers.all %}
 <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
 {% else %}
