--- a/themes/default/templates/sales/salesinvoice_detail.html
+++ b/themes/default/templates/sales/salesinvoice_detail.html
@@ -15,16 +15,16 @@
 {% if perms.sales.add_salesinvoice %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url salesinvoice_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.sales.change_salesinvoice %}
+{% if object.pk in obj_perms.sales.change_salesinvoice %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url salesinvoice_edit object.content_object.pk %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.sales.delete_salesinvoice %}
+{% if object.pk in obj_perms.sales.delete_salesinvoice %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url salesinvoice_delete object.content_object.pk %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.sales.change_salesinvoice %}
+{% if perms.sales.view_salesinvoice %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url salesinvoice_list %}">{% trans 'All' %}</a></li>
 {% endif %}
-{% if perms.sales.change_salesinvoice %}
+{% if object.pk in obj_perms.sales.view_salesinvoice %}
 <li class="print"><a title="{% trans 'Print' %}" href="{% url document_print object.pk object.content_object.invoice_addressee.language %}">{% trans 'Print' %}</a></li>
 {% endif %}
 {% if perms.sales.change_salesinvoice %}
