--- a/themes/default/templates/taxonomy/category_detail.html
+++ b/themes/default/templates/taxonomy/category_detail.html
@@ -15,13 +15,13 @@
 {% if perms.taxonomy.add_category %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url category_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.taxonomy.change_category %}
+{% if object.pk in obj_perms.taxonomy.change_category %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url category_edit object.slug %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.taxonomy.delete_category %}
+{% if object.pk in obj_perms.taxonomy.delete_category %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url category_delete object.slug %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.taxonomy.change_category %}
+{% if perms.taxonomy.view_category %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url category_list %}">{% trans 'All' %}</a></li>
 {% endif %}
 {% endblock %}
