--- a/themes/default/templates/taxonomy/tag_detail.html
+++ b/themes/default/templates/taxonomy/tag_detail.html
@@ -15,13 +15,13 @@
 {% if perms.taxonomy.add_tag %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url tag_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.taxonomy.change_tag %}
+{% if object.pk in obj_perms.taxonomy.change_tag %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url tag_edit object.slug %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.taxonomy.delete_tag %}
+{% if object.pk in obj_perms.taxonomy.delete_tag %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url tag_delete object.slug %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.taxonomy.change_tag %}
+{% if perms.taxonomy.view_tag %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url tag_list %}">{% trans 'All' %}</a></li>
 {% endif %}
 {% endblock %}
