A superuser has now all object permissions.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@896 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/elements/comments.html
+++ b/themes/default/templates/elements/comments.html
@@ -22,7 +22,7 @@
                 {% endwith %}
                 <ul class="actions">
                     {% if comment.pk in obj_perms.comments.can_delete %}
-                    <li class="delete"><a title="{% trans 'Delete' %}" href="{% url comment_delete comment.id %}">{% trans "Delete" %}</a></li>
+                    <li class="delete"><a title="{% trans 'Delete' %}" href="{% url comment_delete comment.pk %}">{% trans "Delete" %}</a></li>
                     {% endif %}
                 </ul>
             </div>
