Added permissions to the author of a comment.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@899 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/elements/comments.html
+++ b/themes/default/templates/elements/comments.html
@@ -21,7 +21,7 @@
                 {% endwith %}
                 {% endwith %}
                 <ul class="actions">
-                    {% if comment.pk in obj_perms.comments.can_delete %}
+                    {% if comment.pk in obj_perms.comments.delete_comment %}
                     <li class="delete"><a title="{% trans 'Delete' %}" href="{% url comment_delete comment.pk %}">{% trans "Delete" %}</a></li>
                     {% endif %}
                 </ul>
