--- a/themes/default/templates/auth/user_detail.html
+++ b/themes/default/templates/auth/user_detail.html
@@ -33,7 +33,9 @@
 <div class="details">
     {% avatar object 90 %}
     <table class="properties">
-        {% property_table object "[['full_name', 'is_active'], ['is_staff', 'is_superuser'], ['date_joined', 'last_login'], 'groups']" %}
+        {% property_table object "[['full_name', 'is_active'], ['is_staff', 'is_superuser'], ['date_joined', 'last_login']]" %}
+        {% property_table object.get_profile "[['language', 'timezone']]" %}
+        {% property_table object "['groups']" %}
     </table>
 </div>
 {% endblock %}
