Improved style of nested menu.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@904 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -1070,7 +1070,10 @@ form .submit input:hover, .submit a:hover, .cancel a:hover {
     padding: 20px;
 }
 
-#sidebar ul.menu ul.menu { display: none; }
+#sidebar ul.menu ul.menu {
+    display: none;
+    margin-left: 15px;
+}
 
 #sidebar ul.menu li.active ul.menu { display: block; }
 
