- Added a couple of new template elements. - Improved i18n.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@906 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/calendar/widgets/latest_events.html
+++ b/themes/default/templates/calendar/widgets/latest_events.html
@@ -21,7 +21,7 @@
     {% endfor %}
 </dl>
 {% else %}
-<p class="disabled">{% trans "No results found." %}</p>
+{% include "elements/empty.html" %}
 {% endif %}
 <p class="add"><a title="{% trans 'Add' %}" href="{% url event_add %}">{% trans "Add" %}</a></p>
 <p><a title="{% trans 'See all' %}" href="{% url event_list %}">{% trans "See all" %}</a></p>
