--- a/themes/default/templates/elements/dashboard.html
+++ b/themes/default/templates/elements/dashboard.html
@@ -13,7 +13,7 @@
         {% if dashboard.widgets.all %}
         {% region dashboard.slug %}</div>
         {% else %}
-        <p class="disabled">{% trans "No widgets found." %}</p>
+        <p class="disabled">{% trans "No widgets." %}</p>
         {% endif %}
     </div>
 </div>
