--- a/themes/default/templates/projects/milestone_list.html
+++ b/themes/default/templates/projects/milestone_list.html
@@ -34,7 +34,7 @@
         {% endfor %}
     </dl>
     {% else %}
-    <p class="disabled">{% trans "No results found." %}</p>
+    {% include "elements/empty.html" %}
     {% endif %}
     {% include 'elements/paginator.html' %}
 </div>
