--- a/themes/default/templates/projects/widgets/latest_tickets.html
+++ b/themes/default/templates/projects/widgets/latest_tickets.html
@@ -7,15 +7,11 @@
 {% if ticket_list %}
 {% detail_table ticket_list "['title', 'status', 'urgency']" "['actions']" %}
 {% else %}
-<p class="disabled">{% trans "No results found." %}</p>
+{% include "elements/empty.html" %}
 {% endif %}
 {% if project %}
 <p class="add"><a title="{% trans 'Add' %}" href="{% url ticket_add project.slug %}">{% trans "Add" %}</a></p>
 <p><a title="{% trans 'See all' %}" href="{% url ticket_list project.slug %}">{% trans "See all" %}</a></p>
-{% endif %}
-{% if area %}
-<p class="add"><a title="{% trans 'Add' %}" href="{% url area_ticket_add area.project.slug area.slug %}">{% trans "Add" %}</a></p>
-<p><a title="{% trans 'See all' %}" href="{% url area_tickets area.project.slug area.slug %}">{% trans "See all" %}</a></p>
 {% endif %}
 {% if milestone %}
 <p class="add"><a title="{% trans 'Add' %}" href="{% url milestone_ticket_add milestone.project.slug milestone.slug %}">{% trans "Add" %}</a></p>
