--- a/themes/default/templates/taxonomy/category_list.html
+++ b/themes/default/templates/taxonomy/category_list.html
@@ -33,7 +33,7 @@
         {% endfor %}
     </ul>
     {% else %}
-    <p class="disabled">{% trans "No results found." %}</p>
+    {% include "elements/empty.html" %}
     {% endif %}
     {% include "elements/paginator.html" %}
 </div>
