--- a/themes/default/templates/todo/unplanned_task_list.html
+++ b/themes/default/templates/todo/unplanned_task_list.html
@@ -31,8 +31,8 @@
     {% endfor %}
     </ul>
     {% else %}
-    <p class="disabled">{% trans "No results found." %}</p>
+    {% include "elements/empty.html" %}
     {% endif %}
-    {% include 'elements/paginator.html' %}
+    {% include "elements/paginator.html" %}
 </div>
 {% endblock %}
