--- a/themes/default/templates/base_delete.html
+++ b/themes/default/templates/base_delete.html
@@ -22,14 +22,8 @@
     {% model_name object as model %}
     {% block message %}<p>{% blocktrans %}Are you sure you want to delete this {{ model }}?{% endblocktrans %}</p>{% endblock %}
     {% block buttons %}
-    <span class="submit"><input title="{% trans 'Confirm' %}" type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
-    {% with index=request.path|slice:':-1'|split:'/'|slice:':-1'|join:'/' %}
-    {% if object.pk and object.get_absolute_url %}
-    <span class="cancel"><a title="{% trans 'Cancel' %}" href="{{ next|default:object.get_absolute_url|default:index|default:'/' }}">{% trans "Cancel" %}</a></span>
-    {% else %}
-    <span class="cancel"><a title="{% trans 'Cancel' %}" href="{{ next|default:index|default:'/' }}">{% trans "Cancel" %}</a></span>
-    {% endif %}
-    {% endwith %}
+    {% include "elements/submit_button.html" %}
+    {% include "elements/cancel_button.html" %}
     {% endblock %}
 </form>
 {% endblock %}
