--- a/themes/default/templates/base_edit.html
+++ b/themes/default/templates/base_edit.html
@@ -43,14 +43,8 @@
     </table>
     {% endblock %}
     {% block buttons %}
-    <span class="submit"><input title="{% trans 'Confirm' %}" type="submit" value="{% trans "Save" %}" /></span>
-    {% with index=request.path|slice:':-1'|split:'/'|slice:':-1'|join:'/' %}
-    {% if object.pk and object.get_absolute_url %}
-    <span class="cancel"><a title="{% trans 'Cancel' %}" href="{{ next|default:object.get_absolute_url|default:index|default:'/' }}">{% trans "Cancel" %}</a></span>
-    {% else %}
-    <span class="cancel"><a title="{% trans 'Cancel' %}" href="{{ next|default:index|default:'/' }}">{% trans "Cancel" %}</a></span>
-    {% endif %}
-    {% endwith %}
+    {% include "elements/save_button.html" %}
+    {% include "elements/cancel_button.html" %}
     {% endblock %}
 </form>
 {% endblock %}
