--- a/themes/default/templates/calendar/event_list.html
+++ b/themes/default/templates/calendar/event_list.html
@@ -32,8 +32,8 @@
     {% endfor %}
     </dl>
     {% else %}
-    <p class="disabled">{% trans "No results found." %}</p>
+    {% include "elements/empty.html" %}
     {% endif %}
-    {% include 'elements/paginator.html' %}
+    {% include "elements/paginator.html" %}
 </div>
 {% endblock %}
