--- a/themes/default/templates/partners/profile_delete.html
+++ b/themes/default/templates/partners/profile_delete.html
@@ -1,9 +1,6 @@
-{% extends "base.html" %}
+{% extends "base_delete.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
-
-{% block meta_title %}{% trans 'Delete social profile' %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -18,19 +15,4 @@
     {% endif %}
     {% add_crumb object %}
     {% add_crumb "Delete" %}
-{% endblock %}
-
-{% block title %}
-<div class="title">
-    <h1>{{ object }}</h1>
-    <h2>{% trans 'Delete' %}</h2>
-</div>
-{% endblock %}
-
-{% block main %}
-<form method="post" action=".">
-    {% csrf_token %}
-    <p>{% trans "Are you sure you want to delete this social profile?" %}</p>
-    <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
-</form>
 {% endblock %}
