--- a/themes/default/templates/taxonomy/widgets/categories.html
+++ b/themes/default/templates/taxonomy/widgets/categories.html
@@ -2,10 +2,14 @@
 
 {% block widget-body %}
 <div class="body">
+    {% if categories %}
     <ul>
         {% for object in categories %}
         {% include "taxonomy/category.html" %}
         {% endfor %}
     </ul>
+    {% else %}
+    {% include "elements/empty.html" %}
+    {% endif %}
 </div>
 {% endblock %}
