--- a/themes/default/templates/todo/task_list.html
+++ b/themes/default/templates/todo/task_list.html
@@ -60,9 +60,9 @@
             {% endfor %}
             </dl>
             {% else %}
-            <p class="disabled">{% trans "No results found." %}</p>
+            {% include "elements/empty.html" %}
             {% endif %}
-            {% include 'elements/paginator.html' %}
+            {% include "elements/paginator.html" %}
         </div>
         {% endblock %}
     </div>
