--- a/themes/default/templates/todo/widgets/latest_tasks.html
+++ b/themes/default/templates/todo/widgets/latest_tasks.html
@@ -21,7 +21,7 @@
     {% endfor %}
 </dl>
 {% else %}
-<p class="disabled">{% trans "No results found." %}</p>
+{% include "elements/empty.html" %}
 {% endif %}
 <p class="add"><a title="{% trans 'Add' %}" href="{% url task_add %}">{% trans "Add" %}</a></p>
 <p><a title="{% trans 'See all' %}" href="{% url task_list %}">{% trans "See all" %}</a></p>
